<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_Alarm" Id="{6f007cc0-79d6-4ec4-b745-54269666fa40}">
    <Declaration><![CDATA[TYPE ST_Alarm :
STRUCT
	nAlarmPriority 		: USINT;
	sErrorMsg       	: STRING(50);
	sAlarmID			: STRING(10);
	dtDateAndTime		: DATE_AND_TIME;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>