<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_Recipe" Id="{c4e1df88-0a13-4ced-990e-db45b12efbfa}">
    <Declaration><![CDATA[TYPE ST_Recipe :
STRUCT
	sRecipeName		: STRING(20);
	tHeatSetTime	: TIME;
	tQuenchTime		: TIME;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>